Fix spacing when multiple games are present

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -46,6 +46,7 @@
 
 /* Games section */
 .game-item {
+  margin-bottom: 15px;
   border: 2px solid black;
   border-radius: 10px;
 }
